# unitree_sim_isaaclab

./: README.md  cam_config_server.yaml  pyproject.toml  sim_main.py
action_provider/: action_provider_dds.py
dds/: dds_create.py  inspire_dds.py  inspire_dds_ftp.py
dds/inspire_dds_lib/: __init__.py  _inspire_hand_ctrl.py  _inspire_hand_state.py  _inspire_hand_touch.py  inspire_hand_defaut.py
tasks/common_observations/: g1_29dof_state.py  h12_27dof_state.py
tasks/g1_tasks/move_cylinder_g1_29dof_dex1_wholebody/: move_cylinder_g1_29dof_dex1_hw_env_cfg.py
tasks/g1_tasks/move_cylinder_g1_29dof_dex3_wholebody/: move_cylinder_g1_29dof_dex3_hw_env_cfg.py
tasks/g1_tasks/move_cylinder_g1_29dof_inspire_wholebody/: move_cylinder_g1_29dof_inspire_hw_env_cfg.py
tasks/g1_tasks/pick_place_cylinder_g1_29dof_dex1/: pickplace_cylinder_g1_29dof_dex1_joint_env_cfg.py
tasks/g1_tasks/pick_place_cylinder_g1_29dof_inspire/: pickplace_cylinder_g1_29dof_inspire_env_cfg.py
tasks/g1_tasks/pick_place_redblock_g1_29dof_dex3/: pickplace_redblock_g1_29dof_dex3_joint_env_cfg.py
tasks/g1_tasks/pick_redblock_into_drawer_g1_29dof_dex3/: pick_redblock_into_drawer_g1_29dof_dex3_joint_env_cfg.py
tasks/h1-2_tasks/pick_place_cylinder_h12_27dof_inspire/: pickplace_cylinder_h12_27dof_inspire_env_cfg.py
